tests/expectations/compiler/function/function_returns_record_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:9:18
     |
   9 |     function foo(board: Board, data: u8) -> Board {
     |                  ^^^^^^^^^^^^
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:9:45
     |
   9 |     function foo(board: Board, data: u8) -> Board {
     |                                             ^^^^^
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:16:18
     |
  16 |     function bar(board: Board) {
     |                  ^^^^^^^^^^^^
"""]
